--- a/frontend/templates/about/aboutJennifer.html
+++ b/frontend/templates/about/aboutJennifer.html
@@ -1,31 +1,45 @@
-<meta name="title" content="Meet Jennifer" />
+<!-- <meta name="title" content="Meet Jennifer" />
 <meta property="og:title" content="Meet Jennifer" />
 <meta name="description" content="An advocate for women, girls, and their families, Jennifer Siebel Newsom is a filmmaker, speaker and President and CEO of the non-profit organization The Representation ...." />
-<meta property="og:description" content="An advocate for women, girls, and their families, Jennifer Siebel Newsom is a filmmaker, speaker and President and CEO of the non-profit organization The Representation ...." />
+<meta property="og:description" content="An advocate for women, girls, and their families, Jennifer Siebel Newsom is a filmmaker, speaker and President and CEO of the non-profit organization The Representation ...." /> -->
 
 
-<div class="wrapper"><div class="main_content"><div class="header_title"><h1>Meet Jennifer</h1></div>
-  <p><img alt="" src="../../media/images/meetjennifer.jpg" class="contentimg" />
-An advocate for women, girls, and their families, Jennifer Siebel Newsom is a filmmaker, speaker and President and CEO of the non-profit organization The Representation Project, a call-to-action campaign and media organization established to shift people&#39;s consciousness, inspire individual and community action and ultimately, transform culture.</p>
-<p>After graduating with honors from Stanford University and Stanford&rsquo;s Graduate School of Business, Jennifer worked in Africa and Latin America, helping women entrepreneurs create their own socially and environmentally responsible businesses. She then moved to Hollywood to pursue acting, quickly landing roles in TV and film including <em>Mad Men</em>, <em>LIFE</em>, <em>In the Valley of Elah</em>, <em>Rent</em>, and <em>Something&rsquo;s Gotta Give</em>.</p>
-<p>There - dismayed by the way women were presented in front of the camera - Jennifer realized she needed to do more work behind the camera. So she wrote, directed, and produced the award winning documentary film, <em>Miss Representation</em> which exposes the underrepresentation of women in positions of power and influence in America and challenges the media&rsquo;s limited and often disparaging portrayals of women. <em>Miss Representation</em> premiered at the 2011 Sundance Film Festival to sold out crowds and was picked up by Oprah Winfrey&rsquo;s OWN network. Newsom subsequently launchedMissRepresentation.org- now The Representation Project.</p>
-<p>In 2012, Jennifer was an Executive Producer of the Oscar-Nominated documentary, <em>The Invisible War</em>, which unveils the epidemic of rape in the U.S. military. She is currently writing, directing, and producing two documentaries, <em>The Mask You Live In </em>and <em>The Great American Lie</em>, which explore how our culture&rsquo;s narrow definition of masculinity is harming our boys, men, and society at large.</p>
-<p>Jennifer has been recognized for her work on Newsweek&#39;s List of &quot;150 Fearless Women Who Shake the World&quot;, Fast Company&rsquo;s &ldquo;League of Extraordinary Women&rdquo;, and San Francisco Business Times&rsquo; &ldquo;Most Influential Women in Business&rdquo;. &nbsp;She has been featured in media outlets such as ABC, NPR, MSNBC, Fox News, Forbes, The Chicago Tribune, O Magazine, Elle, and Vogue, among others. Newsom has received awards including the &ldquo;Champion for Kids Award&rdquo; from Common Sense Media, the &ldquo;Visionary Award&rdquo; from Vision 2020, and the &ldquo;Forever Green Award&rdquo; from Girl Scouts of Northern California. &nbsp;In addition, she received an honorary doctorate degree in Communications from Simmons College in 2013.</p>
-<p>An internationally recognized speaker, Newsom has spoken at institutions including The World Bank, TEDxWomen, Google, Deutsche Bank, Charles Schwab, Fortune&rsquo;s Most Powerful Women&rsquo;s Summit, Soroptimist International of the Americas Conference, Harvard University, MIT, Stanford University, The California Senate, and The National Coalition of Girls Schools.</p>
-<p>Today, when she&rsquo;s not running The Representation Project and making documentaries, Newsom serves as a board member for PBS&rsquo;s Northern California affiliate KQED, a Global Advisory Board member of the Dove Self Esteem Project, a member of the Corporation for Public Broadcasting&#39;s <em>Women and Girls Lead</em> Leadership Council, and a commissioner on the Girl Scouts&rsquo; Healthy MEdia Commission.</p>
-<p>Newsom resides in the San Francisco Bay Area with her husband, California Lieutenant Governor Gavin Newsom, and is the proud mother of three young children, Montana, Hunter and Brooklynn.</p>
+<div class="wrapper">
+	<div class="main_content">
+		<div class="header_title">
+			<h1>Meet Jennifer</h1>
+		</div>
+  	<p><img alt="" src="../../media/images/meetjennifer.jpg" class="contentimg" />
+			An advocate for women, girls, and their families, Jennifer Siebel Newsom is a filmmaker, speaker and President and CEO of the non-profit organization The Representation Project, a call-to-action campaign and media organization established to shift people&#39;s consciousness, inspire individual and community action and ultimately, transform culture.
+		</p>
+		<p>
+			After graduating with honors from Stanford University and Stanford&rsquo;s Graduate School of Business, Jennifer worked in Africa and Latin America, helping women entrepreneurs create their own socially and environmentally responsible businesses. She then moved to Hollywood to pursue acting, quickly landing roles in TV and film including <em>Mad Men</em>, <em>LIFE</em>, <em>In the Valley of Elah</em>, <em>Rent</em>, and <em>Something&rsquo;s Gotta Give</em>.
+		</p>
+		<p>
+			There - dismayed by the way women were presented in front of the camera - Jennifer realized she needed to do more work behind the camera. So she wrote, directed, and produced the award winning documentary film, <em>Miss Representation</em> which exposes the underrepresentation of women in positions of power and influence in America and challenges the media&rsquo;s limited and often disparaging portrayals of women. <em>Miss Representation</em> premiered at the 2011 Sundance Film Festival to sold out crowds and was picked up by Oprah Winfrey&rsquo;s OWN network. Newsom subsequently launchedMissRepresentation.org- now The Representation Project.
+		</p>
+		<p>
+			In 2012, Jennifer was an Executive Producer of the Oscar-Nominated documentary, <em>The Invisible War</em>, which unveils the epidemic of rape in the U.S. military. She is currently writing, directing, and producing two documentaries, <em>The Mask You Live In </em>and <em>The Great American Lie</em>, which explore how our culture&rsquo;s narrow definition of masculinity is harming our boys, men, and society at large.
+		</p>
+		<p>
+			Jennifer has been recognized for her work on Newsweek&#39;s List of &quot;150 Fearless Women Who Shake the World&quot;, Fast Company&rsquo;s &ldquo;League of Extraordinary Women&rdquo;, and San Francisco Business Times&rsquo; &ldquo;Most Influential Women in Business&rdquo;. &nbsp;She has been featured in media outlets such as ABC, NPR, MSNBC, Fox News, Forbes, The Chicago Tribune, O Magazine, Elle, and Vogue, among others. Newsom has received awards including the &ldquo;Champion for Kids Award&rdquo; from Common Sense Media, the &ldquo;Visionary Award&rdquo; from Vision 2020, and the &ldquo;Forever Green Award&rdquo; from Girl Scouts of Northern California. &nbsp;In addition, she received an honorary doctorate degree in Communications from Simmons College in 2013.
+		</p>
+		<p>
+			An internationally recognized speaker, Newsom has spoken at institutions including The World Bank, TEDxWomen, Google, Deutsche Bank, Charles Schwab, Fortune&rsquo;s Most Powerful Women&rsquo;s Summit, Soroptimist International of the Americas Conference, Harvard University, MIT, Stanford University, The California Senate, and The National Coalition of Girls Schools.
+		</p>
+		<p>
+			Today, when she&rsquo;s not running The Representation Project and making documentaries, Newsom serves as a board member for PBS&rsquo;s Northern California affiliate KQED, a Global Advisory Board member of the Dove Self Esteem Project, a member of the Corporation for Public Broadcasting&#39;s <em>Women and Girls Lead</em> Leadership Council, and a commissioner on the Girl Scouts&rsquo; Healthy MEdia Commission.
+		</p>
+		<p>
+			Newsom resides in the San Francisco Bay Area with her husband, California Lieutenant Governor Gavin Newsom, and is the proud mother of three young children, Montana, Hunter and Brooklynn.
+		</p>
 
-	<div class="clear">&nbsp;</div>
+		<div class="clear">&nbsp;</div>
 
+		<div ng-include=" './templates/shareLinks.html' "></div>
 
-
-<div ng-include=" './templates/shareLinks.html' "></div>
-
-
- </div>
-
-
-			
-<div ng-include=" './templates/sidebar.html' "></div>
-	
 	</div>
+			
+	<div ng-include=" './templates/sidebar.html' "></div>
+	
+</div>
