--- a/frontend/templates/be-a-man.html
+++ b/frontend/templates/be-a-man.html
@@ -1,39 +1,27 @@
+<div class="wrapper">
+	<div class="main_content">
+		<div class="header_title">
+			<h1>&quot;Be a man!&quot;</h1>
+		</div>
 
-<div class="wrapper"><div class="main_content"><div class="header_title"><h1>&quot;Be a man!&quot;</h1></div>
-  
+		<p>Friends,</p>
+		<p>“Man up.” “Don’t cry.” “Be a man.” “Don’t be a sissy.”</p>
+		<p>Millions of young boys hear words like that every day, and it has a big effect.</p>
+		<p>My wife, Jennifer, is meeting this issue head on with her new documentary, “The Mask You Live In.”</p>
+		<p><strong><a href="http://time.com/3728698/gender-stereotypes-boy-empowerment/">She’s joined by Maria Shriver in TIME Magazine to talk about how we’re raising our boys, and why it matters. Give it a look!</a></strong>*</p>
+		<p>If you think the way we talk to our sons in America doesn’t matter, think again:</p>
+		<p>“Today, boys are more likely to be expelled or kicked out of school than girls. Young men are only 43 percent of enrollees in post-secondary institutions. Boys are more likely to engage in violent crime, binge drinking, and drugs. …the status quo is unacceptable.”</p>
+		<p>I’ll say. <strong><a href="http://time.com/3728698/gender-stereotypes-boy-empowerment/">Check out Jen’s op-ed and see for yourself.</a></strong></p>
+		<h3><em>Gavin</em></h3>
 
+		<div class="posted_on"><span>Posted on March 8, 2015</span><span>.</span></div>
 
+		<div class="clear">&nbsp;</div>
 
+		<div ng-include=" './templates/shareLinks.html' "></div>
 
-  
+	</div>
 
+	<div ng-include=" './templates/sidebar.html' "></div>
 
-
-<p>Friends,</p>
-<p>“Man up.” “Don’t cry.” “Be a man.” “Don’t be a sissy.”</p>
-<p>Millions of young boys hear words like that every day, and it has a big effect.</p>
-<p>My wife, Jennifer, is meeting this issue head on with her new documentary, “The Mask You Live In.”</p>
-<p><strong><a href="http://time.com/3728698/gender-stereotypes-boy-empowerment/">She’s joined by Maria Shriver in TIME Magazine to talk about how we’re raising our boys, and why it matters. Give it a look!</a></strong>*</p>
-<p>If you think the way we talk to our sons in America doesn’t matter, think again:</p>
-<p>“Today, boys are more likely to be expelled or kicked out of school than girls. Young men are only 43 percent of enrollees in post-secondary institutions. Boys are more likely to engage in violent crime, binge drinking, and drugs. …the status quo is unacceptable.”</p>
-<p>I’ll say. <strong><a href="http://time.com/3728698/gender-stereotypes-boy-empowerment/">Check out Jen’s op-ed and see for yourself.</a></strong></p>
-<h3><em>Gavin</em></h3>
-
-
-<div class="posted_on"><span>Posted on March 8, 2015</span><span>.</span></div>
-
-
-
-
-
-
-
-
-
-	<div class="clear">&nbsp;</div>
-
-
-
-<div ng-include=" './templates/shareLinks.html' "></div>
-
- </div>
+</div>
