--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -28,7 +28,7 @@
               </div>
             </li>
             <li>
-              <a ui-sref="latest-news">Latest</a>
+              <a href="https://www.google.com/#q=%22gavin+newsom%22&tbm=nws&tbs=sbd:1">Latest</a>
             </li>
             <li>
               <a ui-sref="issues">Issues</a>
