--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -26,7 +26,7 @@
 	    </div>
     </div>
         
-<!--     <div style="background:url(media/uploads/slide1bg.jpg) 50% 0% no-repeat;" >
+    <div style="background:url(media/uploads/slide1bg.jpg) 50% 0% no-repeat;" >
       <div class="slide">
 		    <a href="about/index.html">
           <img src="media/uploads/slideshow_images/meetgavin1.png" alt="slide1" />
@@ -65,7 +65,7 @@
         </a>
       </div>  
     </div>    
- -->  </div>
+  </div>
 
   <div id="custom-pager-wrapper">
     <div id="custom-pager">
@@ -73,7 +73,7 @@
   </div>
 
 
-	
+	<!-- 
 	<div class="home-content-wrapper">
     <div class="centered">
       <div class="latest">
@@ -143,6 +143,6 @@
 
 
 
-
             </div>
           </div>
+ -->
