--- a/frontend/templates/issues/economy.html
+++ b/frontend/templates/issues/economy.html
@@ -1,24 +1,23 @@
+<div class="wrapper">
+	<div class="main_content">
+		<div class="header_title">
+			<h1>Economy and jobs</h1>
+		</div>
+  	<p>California is a place of boundless potential. But in a competitive global economy, that doesn’t mean our work is done. Not by a long shot.</p>
+		<p>There’s no limit to what we can accomplish. We do it all in California – from agriculture to high tech – and the best is still ahead. Our challenge is to give businesses and industries what they need to succeed without disadvantaging our workers – things like a streamlined regulatory process, good roads, good schools, and access to high speed internet that benefit everyone while creating a business-friendly atmosphere.</p>
+		<p>I'm proud to be the chief architect of California’s Economic Growth and Competitiveness Agenda.  It's a blueprint for continued economic growth and charts a path for better infrastructure, a focus on manufacturing, building up exports and other pillars of California’s success.</p>
+		<p><strong>I’m firmly committed to ensuring we build an economy where no one gets left behind.</strong> Whether you’re working in a classroom or an emergency room, behind a computer or behind a tractor, on an assembly line or in a lab, hanging windows or working the drive-thru window, you’ve earned your place in California’s economy. </p>
+		<p>Our commitment: Anyone who works hard and plays by the rules should have a chance to get ahead. </p>
+		<p><strong>That means fair wages and the promise to build an economy that will offer the next generation even more than we have today.</strong></p>
+		<hr />
+		<p><em><a href="http://www.ltg.ca.gov/s_aneconomicandcompetitivnessagenda.html">Visit CA.GOV to learn more about Lt. Gov. Newsom's Economic Growth and Competitiveness Agenda.</a></em></p>
 
+		<div class="clear">&nbsp;</div>
 
-<div class="wrapper"><div class="main_content"><div class="header_title"><h1>Economy and jobs</h1></div>
-  <p>California is a place of boundless potential. But in a competitive global economy, that doesn’t mean our work is done. Not by a long shot.</p>
-<p>There’s no limit to what we can accomplish. We do it all in California – from agriculture to high tech – and the best is still ahead. Our challenge is to give businesses and industries what they need to succeed without disadvantaging our workers – things like a streamlined regulatory process, good roads, good schools, and access to high speed internet that benefit everyone while creating a business-friendly atmosphere.</p>
-<p>I'm proud to be the chief architect of California’s Economic Growth and Competitiveness Agenda.  It's a blueprint for continued economic growth and charts a path for better infrastructure, a focus on manufacturing, building up exports and other pillars of California’s success.</p>
-<p><strong>I’m firmly committed to ensuring we build an economy where no one gets left behind.</strong> Whether you’re working in a classroom or an emergency room, behind a computer or behind a tractor, on an assembly line or in a lab, hanging windows or working the drive-thru window, you’ve earned your place in California’s economy. </p>
-<p>Our commitment: Anyone who works hard and plays by the rules should have a chance to get ahead. </p>
-<p><strong>That means fair wages and the promise to build an economy that will offer the next generation even more than we have today.</strong></p>
-<hr />
-<p><em><a href="http://www.ltg.ca.gov/s_aneconomicandcompetitivnessagenda.html">Visit CA.GOV to learn more about Lt. Gov. Newsom's Economic Growth and Competitiveness Agenda.</a></em></p>
+		<div ng-include=" './templates/shareLinks.html' "></div>
 
-	<div class="clear">&nbsp;</div>
+	</div>
 
-
-
-<div ng-include=" './templates/shareLinks.html' "></div>
-
- </div>
-
-<div ng-include=" './templates/sidebar.html' "></div>
-
+	<div ng-include=" './templates/sidebar.html' "></div>
 
 </div>
