--- a/frontend/templates/issues/energy.html
+++ b/frontend/templates/issues/energy.html
@@ -1,18 +1,20 @@
+<div class="wrapper">
+	<div class="main_content">
+		<div class="header_title">
+			<h1>A clean energy future</h1>
+		</div>
+ 	 <p>As of 2013, roughly 23% of California’s energy came from renewable sources like wind, solar and biomass. It’s a good start but we have a long road ahead to meet our goal of 33 percent renewable energy by 2020.</p>
+		<p><strong>Clean energy is the path to securing our future:</strong> Freedom from foreign oil. A cleaner environment. Taking on the threat of global climate change. Good-paying jobs that support manufacturing and high-tech industries right here in the United States. While we are on the road to a clean energy future, government needs to be smart about developing our own natural resources here at home. </p>
+		<p>As the Chair of the California State Lands Commission in 2013, I directed the staff to review all of our contracts to make sure we are maximizing our resources and enforcing our environmental standards to ensure we protect the environment and unmatched beauty of our state. </p>
+		<p>Being smart about developing our natural resources is the key to California controlling our own clean energy future.</p>
+		<p>That’s why we have to double down on our commitment to alternative energy and conservation at home, in business and on the road.</p>
 
-<div class="wrapper"><div class="main_content"><div class="header_title"><h1>A clean energy future</h1></div>
-  <p>As of 2013, roughly 23% of California’s energy came from renewable sources like wind, solar and biomass. It’s a good start but we have a long road ahead to meet our goal of 33 percent renewable energy by 2020.</p>
-<p><strong>Clean energy is the path to securing our future:</strong> Freedom from foreign oil. A cleaner environment. Taking on the threat of global climate change. Good-paying jobs that support manufacturing and high-tech industries right here in the United States. While we are on the road to a clean energy future, government needs to be smart about developing our own natural resources here at home. </p>
-<p>As the Chair of the California State Lands Commission in 2013, I directed the staff to review all of our contracts to make sure we are maximizing our resources and enforcing our environmental standards to ensure we protect the environment and unmatched beauty of our state. </p>
-<p>Being smart about developing our natural resources is the key to California controlling our own clean energy future.</p>
-<p>That’s why we have to double down on our commitment to alternative energy and conservation at home, in business and on the road.</p>
+		<div class="clear">&nbsp;</div>
 
-	<div class="clear">&nbsp;</div>
+		<div ng-include=" './templates/shareLinks.html' "></div>
 
+	</div>
 
-<div ng-include=" './templates/shareLinks.html' "></div>
-
- </div>
-
-<div ng-include=" './templates/sidebar.html' "></div>
+	<div ng-include=" './templates/sidebar.html' "></div>
 
 </div>
