--- a/frontend/templates/issues/government.html
+++ b/frontend/templates/issues/government.html
@@ -1,25 +1,24 @@
+<div class="wrapper">
+	<div class="main_content">
+		<div class="header_title">
+			<h1>Making government work better</h1>
+		</div>
+  	<p>There’s no denying it: This is a digital age. Tablets and smart phones are changing the face of business and government, and we’ve long since left the days when the internet was a tool for techies alone. Today, we can all be fully interconnected. </p>
+		<p><strong>It’s time for government to step up and join the digital age.</strong></p>
+		<iframe width="255" height="193" src="http://www.youtube.com/embed/BUFCzXDqw1E?rel=0" frameborder="0" allowfullscreen style="float: right; margin: 10px;"></iframe>
 
-<div class="wrapper"><div class="main_content"><div class="header_title"><h1>Making government work better</h1></div>
-  <p>There’s no denying it: This is a digital age. Tablets and smart phones are changing the face of business and government, and we’ve long since left the days when the internet was a tool for techies alone. Today, we can all be fully interconnected. </p>
-<p><strong>It’s time for government to step up and join the digital age.</strong></p>
-<iframe width="255" height="193" src="http://www.youtube.com/embed/BUFCzXDqw1E?rel=0" frameborder="0" allowfullscreen style="float: right; margin: 10px;"></iframe>
+		<p>We need a government that’s accessible 24-7. That means mobile-friendly websites and more ways to conduct business with the government online. We should use our improving digital connectivity to make it easier for people to get help, reducing wait times and connecting citizens with their government in new and innovative ways.  And of course, that means continuing our work to expand high-speed internet access to every community and every family.</p>
+		<p>We can also do more to increase government transparency by making more information available online to individual citizens so they know exactly how they’re being served and how their tax dollars are being spent. We can hardly imagine the services that will arise when public data that’s locked up in government warehouses is released to the public.  </p>
+		<p>When I look at what’s happening today online and in the world of telecommunications, I’m encouraged about what comes next. California has led the way in technology and innovation, and I’ll be fighting to make sure we’re leaning into the future at all levels of government. </p>
+		<hr />
+		<p><a href="http://www.citizenville.com/"><em>Learn more about Gavin Newsom's approach to government transparency and accessibility in his acclaimed book, Citizenville</em></a>.</p>
 
-<p>We need a government that’s accessible 24-7. That means mobile-friendly websites and more ways to conduct business with the government online. We should use our improving digital connectivity to make it easier for people to get help, reducing wait times and connecting citizens with their government in new and innovative ways.  And of course, that means continuing our work to expand high-speed internet access to every community and every family.</p>
-<p>We can also do more to increase government transparency by making more information available online to individual citizens so they know exactly how they’re being served and how their tax dollars are being spent. We can hardly imagine the services that will arise when public data that’s locked up in government warehouses is released to the public.  </p>
-<p>When I look at what’s happening today online and in the world of telecommunications, I’m encouraged about what comes next. California has led the way in technology and innovation, and I’ll be fighting to make sure we’re leaning into the future at all levels of government. </p>
-<hr />
-<p><a href="http://www.citizenville.com/"><em>Learn more about Gavin Newsom's approach to government transparency and accessibility in his acclaimed book, Citizenville</em></a>.</p>
+		<div class="clear">&nbsp;</div>
 
-	<div class="clear">&nbsp;</div>
+		<div ng-include=" './templates/shareLinks.html' "></div>
 
+	</div>
 
-
-<div ng-include=" './templates/shareLinks.html' "></div>
-
- </div>
-
-
-<div ng-include=" './templates/sidebar.html' "></div>
-
+	<div ng-include=" './templates/sidebar.html' "></div>
 
 </div>
