--- a/frontend/templates/joinUs.html
+++ b/frontend/templates/joinUs.html
@@ -1,39 +1,41 @@
+<div class="wrapper">
+	<div class="main_content">
+		<div class="header_title">
+			<h1>Join us</h1>
+		</div>
 
-<div class="wrapper"><div class="main_content"><div class="header_title"><h1>Join us</h1></div>
+		<pre><code>
+		</code></pre>
+		<p>Friends,</p>
+		<p>I’ve never been a fan of pretense or procrastination.</p>
+		<p>After all, our state is defined by its independent, outspoken spirit.  When Californians see something we truly believe in, we say so and act accordingly – without evasiveness or equivocation.</p>
+		<p><strong>So today I’m announcing that I’m creating a committee to run for California Governor in 2018.</strong>  Because I truly and passionately believe in the future of this great state.</p>
+		<p><strong>Today, Californians are blessed with the remarkable leadership of Governor Jerry Brown,</strong> who in the face of long odds has led our state to firm fiscal footing and brought us to the enviable position of dreaming – and achieving – big dreams again.</p>
+		<p><strong>Even so, long-term challenges remain daunting –</strong> we must continue to grow our economy and create private-sector jobs, we must invest in public education and keep college affordable, we must address the widening inequalities that separate our communities and we must maintain California’s historic leadership in meeting the climate challenge.  </p>
+		<p><strong>Over the next four years, my advocacy and efforts on these issues as your Lieutenant Governor will continue unabated.</strong>  And I will actively support Governor Brown and our Legislature in every way I can.</p>
+		<p>But the reality of running for Governor – even four years from now – in America’s largest, most diverse state demands that I start raising resources now if we’re going to lead a conversation worthy of the 38 million people who live, work, attend school and raise families in the Golden State.   </p>
+		<p>Creating this committee gives people a way to support our efforts – and I hope you can help spread the word.</p>
+		<p>I make this promise – this won’t be an ordinary campaign – but, then again, California has always been an extraordinary place.   </p>
+		<p>As ever, thank you for your friendship,</p>
+		<h3><em>Gavin Newsom</em></h3>
+		<p><Br /><BR />
+		<center><a href="https://www.facebook.com/GavinNewsom/posts/10153129252948117"><img src="../media/images/shareonfacebook.png" alt="Share on Facebook" /></a>
+
+		<a href="https://twitter.com/intent/tweet?text=Lt.%20Governor%20%40GavinNewsom%20announces%20a%20committee%20to%20run%20for%20California%20Governor%20in%202018!%20http%3A%2F%2Fwww.gavinnewsom.com"><img src="../media/images/shareontwitter.png" alt="Share on Twitter" /></a>
+		</center>
+		<Br /><BR /></p>
 
 
-<pre><code>
-</code></pre>
-<p>Friends,</p>
-<p>I’ve never been a fan of pretense or procrastination.</p>
-<p>After all, our state is defined by its independent, outspoken spirit.  When Californians see something we truly believe in, we say so and act accordingly – without evasiveness or equivocation.</p>
-<p><strong>So today I’m announcing that I’m creating a committee to run for California Governor in 2018.</strong>  Because I truly and passionately believe in the future of this great state.</p>
-<p><strong>Today, Californians are blessed with the remarkable leadership of Governor Jerry Brown,</strong> who in the face of long odds has led our state to firm fiscal footing and brought us to the enviable position of dreaming – and achieving – big dreams again.</p>
-<p><strong>Even so, long-term challenges remain daunting –</strong> we must continue to grow our economy and create private-sector jobs, we must invest in public education and keep college affordable, we must address the widening inequalities that separate our communities and we must maintain California’s historic leadership in meeting the climate challenge.  </p>
-<p><strong>Over the next four years, my advocacy and efforts on these issues as your Lieutenant Governor will continue unabated.</strong>  And I will actively support Governor Brown and our Legislature in every way I can.</p>
-<p>But the reality of running for Governor – even four years from now – in America’s largest, most diverse state demands that I start raising resources now if we’re going to lead a conversation worthy of the 38 million people who live, work, attend school and raise families in the Golden State.   </p>
-<p>Creating this committee gives people a way to support our efforts – and I hope you can help spread the word.</p>
-<p>I make this promise – this won’t be an ordinary campaign – but, then again, California has always been an extraordinary place.   </p>
-<p>As ever, thank you for your friendship,</p>
-<h3><em>Gavin Newsom</em></h3>
-<p><Br /><BR />
-<center><a href="https://www.facebook.com/GavinNewsom/posts/10153129252948117"><img src="../media/images/shareonfacebook.png" alt="Share on Facebook" /></a>
+		<div class="posted_on">
+			<span>Posted on February 11, 2015</span><span>.</span>
+		</div>
 
-<a href="https://twitter.com/intent/tweet?text=Lt.%20Governor%20%40GavinNewsom%20announces%20a%20committee%20to%20run%20for%20California%20Governor%20in%202018!%20http%3A%2F%2Fwww.gavinnewsom.com"><img src="../media/images/shareontwitter.png" alt="Share on Twitter" /></a>
-</center>
-<Br /><BR /></p>
+		<div class="clear">&nbsp;</div>
 
+		<div ng-include=" './templates/shareLinks.html' "></div>
 
-<div class="posted_on"><span>Posted on February 11, 2015</span><span>.</span></div>
+ 	</div>
+ 	
+ 	<div ng-include=" './templates/sidebar.html' "></div>
 
-	<div class="clear">&nbsp;</div>
-
-<div class="share_links">
-	<span class='st_sharethis' displayText='ShareThis'></span>
-	<span class='st_facebook' displayText='Facebook'></span>
-	<span class='st_twitter' displayText='Tweet'></span>
-	<span class='st_email' displayText='Email'></span>
 </div>
-
-
- </div>
