--- a/frontend/templates/pressReleases.html
+++ b/frontend/templates/pressReleases.html
@@ -1,31 +1,31 @@
+<div class="wrapper">
+	<div class="main_content">
+		<div class="header_title">
+			<h1>Press Releases</h1>
+		</div>
+		
+		<h1></h1>
 
-<div class="wrapper"><div class="main_content"><div class="header_title"><h1>Press Releases</h1></div>
-  
-<h1></h1>
+		<table>
+			<tr>
+				<td style="white-space:nowrap;width:90px;vertical-align:top;">February 5, 2014</td>
+				<td style="vertical-align:top;padding-left:10px;padding-bottom:5px;">
+					<a ui-sref="marriageEqualityWinterOfLove">Lt. Gov. Gavin Newsom partners with marriage equality groups to create winter of love pinterest board</a>
+				</td>
+			</tr>
+		</table>
+		
+		<br />
 
+<!-- 		<p>
+			Want to be the first to know when there's a new update here?  Subscribe to <a href="../../feeds/category/press-releases/index.html">this category's rss feed.</a>
+		</p> -->
 
+		<div ng-include=" './templates/shareLinks.html' "></div>
 
+		<div class="clear">&nbsp;</div>
+	</div>	
 
+	<div ng-include=" './templates/sidebar.html' "></div>
 
-<table>
-
-
-<tr><td style="white-space:nowrap;width:90px;vertical-align:top;">February 5, 2014</td><td style="vertical-align:top;padding-left:10px;padding-bottom:5px;"><a href="../../2014/02/05/lt-gov-gavin-newsom-partners-marriage-equality-gro/index.html">Lt. Gov. Gavin Newsom partners with marriage equality groups to create winter of love pinterest board</a></td></tr>
-
-
-</table>
-<br />
-<p>Want to be the first to know when there's a new update here?  Subscribe to <a href="../../feeds/category/press-releases/index.html">this category's rss feed.</a></p>
-
-
-<div ng-include=" './templates/shareLinks.html' "></div>
-
-
-	<div class="clear">&nbsp;</div>
-</div>	
-
-<div ng-include=" './templates/sidebar.html' "></div>
-
-
- </div>
-
+</div>
