--- a/frontend/templates/sidebar.html
+++ b/frontend/templates/sidebar.html
@@ -29,45 +29,7 @@
 			</table>
 		</form>
 		
-		<a href="../bitcoin/index.html" class="button small">Donate via BitCoin</a>
-		<a href="../monthly/index.html" class="button small">Donate Monthly</a>
+		<a href="https://newsomlive.bsd.net/page/s/donate-via-bitcoin" class="button small">Donate via BitCoin</a>
+		<a href="https://secure.actblue.com/contribute/page/newsomdonate?refcode=wwwmonthly&recurring=12" class="button small">Donate Monthly</a>
 
-	</div>
-
-
-
-	<div class="latest">
-		<h2>Latest News</h2>
-
-
-        
-  
-		<span class="pubdate">March 8, 2015</span>
-		<span class="title">
-			<a ui-sref="be-a-man" style="font-weight:bold;">&quot;Be a man!&quot;</a>
-		</span>
-
-		<span class="pubdate">February 11, 2015</span>
-		<span class="title">
-			<a href="http://www.huffingtonpost.com/2015/02/11/gavin-newsom-governor_n_6662504.html" style="font-weight:bold;">Huffington Post: Gavin Newsom Takes First Step Toward Running For California Governor</a>
-		</span>
-
-		<span class="pubdate">February 11, 2015</span>
-		<span class="title">
-			<a href="http://ww2.kqed.org/news/2015/02/11/gavin-newsom-says-hes-running-for-California-governor-in-2018/" style="font-weight:bold;">KQED: Yes, Says Gavin Newsom: I’m Running for Governor</a>
-		</span>
-
-		<span class="pubdate">February 11, 2015</span>
-		<span class="title">
-			<a href="http://www.sacbee.com/news/politics-government/capitol-alert/article9735230.html" style="font-weight:bold;">Sacramento Bee: Gavin Newsom to open campaign account for governor in 2018</a>
-		</span>
-
-		<span class="pubdate">February 11, 2015</span>
-		<span class="title">
-			<a ui-sref="join-us" style="font-weight:bold;">Join us</a>
-		</span>
-
-		<p>
-			<a href="../latest-news/index.html" class="latest">Read more news.</a>
-		</p>
 	</div>
