--- a/frontend/templates/footer.html
+++ b/frontend/templates/footer.html
@@ -5,7 +5,7 @@
       <table>
         <tr>
           <td class="heading">
-            <a href="../facebook/index.html">CONNECT ON FACEBOOK</a>
+            <a href="https://www.facebook.com/GavinNewsom">CONNECT ON FACEBOOK</a>
           </td>
           <td>
             <div class="fb-like" data-href="https://www.facebook.com/GavinNewsom" data-width="310" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
@@ -13,7 +13,7 @@
         </tr>
         <tr>
           <td class="heading">
-            <a href="../twitter/index.html">CONNECT ON TWITTER</a>
+            <a href="https://twitter.com/gavinnewsom">CONNECT ON TWITTER</a>
           </td>
           <td>     
             <a href="https://twitter.com/gavinnewsom" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @gavinnewsom</a>
@@ -21,13 +21,11 @@
         </tr>
         <tr>
           <td class="heading">
-            <a href="../flipboard/index.html">CONNECT ON FLIPBOARD</a>
+            <a href="https://flipboard.com/@GavinNewsom?utm_campaign=widgets&utm_medium=web&utm_source=profile_badge&utm_content=gavinnewsom.com?utm_campaign=widgets&utm_source=logo&utm_medium=web">CONNECT ON FLIPBOARD</a>
           </td>
           <td>
           <a href="https://flipboard.com/@GavinNewsom?utm_campaign=widgets&utm_medium=web&utm_source=profile_badge&utm_content=gavinnewsom.com?utm_campaign=widgets&utm_source=logo&utm_medium=web"><img src="http://cdn.flipboard.com/badges/flipboard_srsw.png" alt="Flipboard" /></a>
-<!--             <a data-flip-widget="pro" href="http://flipboard.com/profile/GavinNewsom?utm_campaign=widgets&amp;utm_medium=web&amp;utm_source=profile_badge&amp;utm_content=gavinnewsom.com" style="float:left;margin-right:10px;" class="fl_profile_button" target="_blank">Gavin Newsom<i></i><b></b></a>
-            <script src="https://cdn.flipboard.com/web/buttons/js/flbuttons.min.js" type="text/javascript"></script> -->
-            <a href="../flipboard/index.html" style="position:relative;bottom:9px;">Use Flipboard to read good stuff that Gavin's reading this week.</a>
+            <a href="https://flipboard.com/@GavinNewsom?utm_campaign=widgets&utm_medium=web&utm_source=profile_badge&utm_content=gavinnewsom.com?utm_campaign=widgets&utm_source=logo&utm_medium=web" style="position:relative;bottom:9px;">Use Flipboard to read good stuff that Gavin's reading this week.</a>
           </td>
         </tr>
         <tr>
@@ -72,13 +70,13 @@
     </ul>
     <ul>
       <li>
-        <strong><a ui-sref="latest-news">Latest News</a></strong>
+        <strong><a href="https://www.google.com/#q=%22gavin+newsom%22&tbm=nws&tbs=sbd:1">Latest News</a></strong>
       </li>
       <li>
         <a ui-sref="press-releases">Press Releases</a>
       </li>
       <li>
-        <a ui-sref="latest-news">In the News</a>
+        <a href="https://www.google.com/#q=%22gavin+newsom%22&tbm=nws&tbs=sbd:1">In the News</a>
       </li>
     </ul>
     <ul>
@@ -95,10 +93,10 @@
       <li>
         <strong><a href="https://newsomlive.bsd.net/page/s/contact-us">Contact</a></strong>
       </li>
-      <li>Warren & Associates<br />
-          20 Galli Drive<br />
-          Suite A<br />
-          Novato, CA  94949<br />
+      <li>Deane & Company<br />
+          1787 Tribute Road,<br />
+          Suite K<br />
+          Sacramento, CA  95815<br />
           <!-- Phone: (415) 963-9240  --><br />
       </li>
     </ul>
@@ -119,7 +117,7 @@
     <span class="copy">&copy; 2015 Newsom for California</span>
     <span class="disclaimer">Paid for by Newsom for California - Governor 2018.</span>
     <span class="powered">
-      <a href="privacy-policy/index.html">Privacy Policy</a>
+      <a ui-sref="privacyPolicy">Privacy Policy</a>
     </span>
   </div>
 </div>
