--- a/frontend/templates/getInvolved.html
+++ b/frontend/templates/getInvolved.html
@@ -1,21 +1,28 @@
+<div class="wrapper">
+	<div class="main_content">
+		<div class="header_title">
+			<h1>Get Involved</h1>
+		</div>
+	  <p>Thanks for your support!</p>
+		<p>Ready to get involved right away? Here's what you can do:</p>
+		<ul>
+			<li>
+				<a ui-sref="endorse">Add your name to my list of supporters!</a> 
+			</li>
+			<li>
+				<a href="https://secure.actblue.com/contribute/page/newsomdonate?refcode=www">Make a donation.</a> 
+			</li>
+			<li>
+				<a href="https://www.facebook.com/GavinNewsom">Join the conversation on Facebook.</a> 
+			</li>
+		</ul>
 
-<div class="wrapper"><div class="main_content"><div class="header_title"><h1>Get Involved</h1></div>
-  <p>Thanks for your support!</p>
-<p>Ready to get involved right away? Here's what you can do:</p>
-<ul>
-<li><a href="../endorse/index.html">Add your name to my list of supporters!</a> </li>
-<li><a href="../donate/index.html">Make a donation.</a> </li>
-<li><a href="../facebook/index.html">Join the conversation on Facebook.</a> </li>
-</ul>
+		<div class="clear">&nbsp;</div>
 
-	<div class="clear">&nbsp;</div>
+		<div ng-include=" './templates/shareLinks.html' "></div>
 
+	</div>
 
-
-<div ng-include=" './templates/shareLinks.html' "></div>
-
- </div>
-
-<div ng-include=" './templates/sidebar.html' "></div>
+	<div ng-include=" './templates/sidebar.html' "></div>
 
 </div>
